# minisam

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  setup.py
examples/python/: bundle_adjustment_bal.py
minisam/: CMakeLists.txt  __init__.py  config.h.in  sophus.py
minisam/nonlinear/: NonlinearOptimizer.cpp
minisam/sophus_wrapper/: sophus.cpp
python/: CMakeLists.txt
python/minisam/: __init__.py
python/minisam/sophus/: __init__.py
tests/: CMakeLists.txt
